tests/paczka1/fuzzy1/45258792.err
Error in line 8: tWO A536 39,1
Error in line 10: tWO S896 79,6
Error in line 26: tWO A536 97,5
Error in line 30: 7dPGG0UIA2h S896 55,3
Error in line 37: whb2O S896 12,3
Error in line 33: 7dPGG0UIA2h S518 32,3
